Name:                   weekylab
Version:                0.0.1.0
Author:                 Alejandro Garcia <alejandro.garcia@iohk.iohk>
Maintainer:             Alejandro Garcia <alejandro.garcia@iohk.iohk>
License:                BSD3
License-File:           LICENSE
Synopsis:               GitHub Classroom example for Haskell
Description:            Using Cabal as test framework for doctest and hspec
Category:               Codec
Cabal-Version:          >= 1.24
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      P02
                      , P03
                      , P04
                      , P05
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4 && < 5
                      , array
                      , containers >0.6
                      , QuickCheck
                      , free

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , weeklylab


Source-Repository head
  Type:                 git
  Location:             https://github.com/elviejo79/W02
